# Endfield-Stocks-OCR

./: .gitignore  .pylintrc  README.md  pylintrc  pyproject.toml
src/endfield_stocks_ocr/: __init__.py  logger.py  main.py  unpack.py
src/endfield_stocks_ocr/config/: default_config.toml  help.py
src/endfield_stocks_ocr/models/: bounding_box.py
src/endfield_stocks_ocr/ocr/: bounding_box.py  get_values.py  get_values_manual.py  set_window.py  test.py
src/endfield_stocks_ocr/utils/: aspect_ratio.py  logger.py  package_dirs.py  unpack.py
